# mojokernel

./: .gitignore  DEV.md  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml
mojokernel/: __init__.py  __main__.py  _version.py  kernel.py
mojokernel/engines/: server_engine.py
server/: mojo_repl.cpp  platform.h  repl_server.cpp  repl_server_pty.cpp  test_jupyter_lib.cpp  test_repl_mode.cpp
tests/: test_kernel.py
tools/: build_server.sh
