[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mojokernel"
version = "0.1.0"
description = "Jupyter kernel for Mojo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.0",
    "pexpect>=4.0",
]

[tool.setuptools.packages.find]
include = ["mojokernel*"]

[tool.setuptools.package-data]
mojokernel = ["kernelspec/*.json", "bin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
mojokernel = "mojokernel.__main__:main"
