[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mojokernel"
dynamic = ["version"]
description = "Jupyter kernel for Mojo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.0",
    "pexpect>=4.0",
    "jupyter-client>=8.8.0",
    "mojo",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "safecmd>=0.1.2",
  "nbclassic>=1.3.3",
]

[tool.setuptools.dynamic]
version = {attr = "mojokernel._version.__version__"}

[tool.setuptools.packages.find]
include = ["mojokernel*"]

[tool.setuptools.package-data]
mojokernel = ["kernelspec/*.json", "bin/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore:.*use of forkpty.*:DeprecationWarning"]
markers = ["slow: long-running or optional tests (e.g. pexpect fallback engine)"]

[project.scripts]
mojokernel = "mojokernel.__main__:main"

